--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "author": "Pacmard <030704@mail.ru>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@cloudflare/workers-types": "^2.2.2",
+    "@types/lodash": "^4.14.169",
+    "prettier": "^1.18.2",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
