--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@cloudflare/workers-types": "^2.2.2",
     "@types/lodash": "^4.14.169",
     "prettier": "^1.18.2",
-    "ts-loader": "^9.1.2",
+    "ts-loader": "8.1.0",
     "typescript": "^4.2.4",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
