--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
+        env:
+          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
